[build-system]
requires = ["setuptools>=71.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mathlib"
version = "0.1.0"
description = "Tiny arithmetic helpers."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.9.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
